--- a/redirect.html
+++ b/redirect.html
@@ -2,15 +2,15 @@
 <html lang="en-US">
 
 <head>
-    <meta http-equiv='refresh' content='0; URL=http://aryanm.s3.amazonaws.com/kahootinator/index.html'>
+    <meta http-equiv='refresh' content='0; URL=https://kahootbotter.live'>
     <meta charset="utf-8">
     <meta name="author" content="Aryan M">
     <meta name="description" content="Kahootinator >:D">
-    <meta name="keywords" content="Aryan M Games, AryanM, Kahootinator, AryanM Kahootinator">
+    <meta name="keywords" content="ADarthOCE, Kahoot Botter">
     <meta name="language" content="English">
 </head>
     <body>
-        You should be redirected to <a href="http://aryanm.s3.amazonaws.com/kahootinator/index.html">Kahootinator</a> shortly.<br>
+        You should be redirected to <a href="https://kahootbotter.live">Kahoot Botter</a> shortly.<br>
         If you're not redirected, use the link above.
     </body>
 </html>
