--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class='explanation'>
             Deploy hundreds of kahoot bots to infiltrate and take over any public Kahoot game!<br>
-            Use wisely... https://kahootbotter.live is not responsible for any consequences from use of this tool.
+            Use wisely... https://kahootbotter.live is not responsible for any consequences from use of this tool. Tool Made by DarthOCE
         </div><br><br>
         <div class='form'>
             Game PIN:<br>
@@ -81,7 +81,7 @@
             xhttp.onreadystatechange = function () {
                 if (this.readyState == 4 && this.status == 200) {
                     console.log('Response: ' + this.responseText);
-                    document.getElementById('button').innerHTML = 'KAHOOTINATE!';
+                    document.getElementById('button').innerHTML = 'Botting!';
                     document.getElementById('success').innerHTML = 'Bots have joined!<br>If it didn\'t work, make sure the PIN you entered was correct.<br>Otherwise, try lowering the number of bots and try again.';
                 }
             }
