--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class='explanation'>
             Deploy hundreds of kahoot bots to infiltrate and take over any public Kahoot game!<br>
-            Use wisely... https://kahootbotter.live is not responsible for any consequences from use of this tool. Tool Made by DarthOCE
+            Use wisely... https://kahootbotter.live is not responsible for any consequences from use of this tool, Tool Made by DarthOCE. 
         </div><br><br>
         <div class='form'>
             Game PIN:<br>
