--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport"
         content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
     <meta name="author" content="DarthOCE">
-    <meta name="description" content="Kahoot Botter">
+    <meta name="description" content="The Fastest kahoot Botter on the Internet!, Made by DarthOCE">
     <meta name="keywords" content="DarthOCE, Kahoot Botter">
     <meta name="language" content="English">
     <link rel="icon" href="favicon.ico">
