--- a/faq/index.html
+++ b/faq/index.html
@@ -2,7 +2,7 @@
 <html lang='en-US'>
 
 <head>
-    <title>Kahoot Botter</title>
+    <title>Kahoot Botter | FAQ</title>
     <meta charset="utf-8">
     <meta name="viewport"
         content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
@@ -12,10 +12,38 @@
     <meta name="language" content="English">
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="https://kahootbotter.live">Kahoot Botter</a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+          <ul class="nav navbar-nav">
+            <li><a href="https://kahootbotter.live">Home</a></li>
+            <li class="active"><a href="https://kahootbotter.live/faq/">FAQ</a></li>
+          </ul>
+          
+        </div>
+      </div>
+    </nav>
 </head>
+
+
 <div class="main">
  <h1 class="title">
    FAQ 
  </h1>
+ <h2 class = "q1">
+   <b>Q: Why dont the bots send?</b>
+   <h3 class = "a1">A: This is because the webserver is not online, if this happens simpily refresh the page, another reason this may happen is if replit is blacklisted on your internet.</h3>
+ </h2>
 </div>
 </html>
