--- a/faq/index.html
+++ b/faq/index.html
@@ -45,5 +45,9 @@
    <b>Q: Why dont the bots send?</b>
    <h3 class = "a1">A: This is because the webserver is not online, if this happens simpily refresh the page, another reason this may happen is if replit is blacklisted on your internet.</h3>
  </h2>
+ <h2 class = "q2">
+  <b>Q: Why can I only send 200 bots??</b>
+  <h3 class = "a2">A: This is because our current server cant handle too many threads/bots.</h3>
+</h2>
 </div>
 </html>
