--- a/faq/index.html
+++ b/faq/index.html
@@ -49,5 +49,9 @@
   <b>Q: Why can I only send 200 bots?</b>
   <h3 class = "a2">A: This is because our current server cant handle too many threads/bots.</h3>
 </h2>
+ <h2 class = "q3">
+  <b>Q: Can this be traced back too me>?</b>
+  <h3 class = "a3">A: No, it can't, because it runs threw a replit webserver it will be traced back to replit and they cant access the logs for that webserver.</h3>
+</h2>
 </div>
 </html>
