--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
               <li class="active"><a href="https://kahootbotter.live">Home</a></li>
+              <li><a href="https://kahootbotter.live/quizizz/">Quizizz</a></li>
               <li><a href="https://kahootbotter.live/faq/">FAQ</a></li>
-            </ul>
+            </ul>I 
             
           </div>
         </div>
