--- a/faq/index.html
+++ b/faq/index.html
@@ -28,7 +28,8 @@
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
             <li><a href="https://kahootbotter.live">Home</a></li>
-            <li class="active"><a href="https://kahootbotter.live/faq/">FAQ</a></li>
+              <li><a href="https://kahootbotter.live/quizizz/">Quizizz</a></li>
+              <li class="active"><a href="https://kahootbotter.live/faq/">FAQ</a></li>
           </ul>
           
         </div>
