--- a/faq/index.html
+++ b/faq/index.html
@@ -51,8 +51,12 @@
   <h3 class = "a2">A: This is because our current server cant handle too many threads/bots.</h3>
 </h2>
  <h2 class = "q3">
-  <b>Q: Can this be traced back too me>?</b>
+  <b>Q: Can this be traced back too me?</b>
   <h3 class = "a3">A: No, it can't, because it runs threw a replit webserver it will be traced back to replit and they cant access the logs for that webserver.</h3>
+</h2>
+ <h2 class = "q4">
+  <b>Q: How do I use the discord bot?</b>
+  <h3 class = "a4">A: Invite it too your server with the given permissions it asks for, then run the k!help command for a list of all the commands</h3>
 </h2>
 </div>
 </html>
