--- a/faq/index.html
+++ b/faq/index.html
@@ -52,7 +52,7 @@
 </h2>
  <h2 class = "q3">
   <b>Q: Can this be traced back too me?</b>
-  <h3 class = "a3">A: No, it can't, because it runs threw a replit webserver it will be traced back to replit and they cant access the logs for that webserver.</h3>
+  <h3 class = "a3">A: No, it can't, because it runs in a replit webserver it will be traced back to replit and they cant access the logs for that webserver.</h3>
 </h2>
  <h2 class = "q4">
   <b>Q: How do I use the discord bot?</b>
