--- a/faq/index.html
+++ b/faq/index.html
@@ -56,7 +56,7 @@
 </h2>
  <h2 class = "q4">
   <b>Q: How do I use the discord bot?</b>
-  <h3 class = "a4">A: Invite it too your server with the given permissions it asks for, then run the k!help command for a list of all the commands</h3>
+  <h3 class = "a4">A: Invite it too your server with the given permissions it asks for, then run the <b>k!help</b> command for a list of all the commands</h3>
 </h2>
 </div>
 </html>
