--- a/faq/index.html
+++ b/faq/index.html
@@ -45,7 +45,7 @@
  </h1>
  <h2 class = "q1">
    <b>Q: Why dont the bots send?</b>
-   <h3 class = "a1">A: This is because the webserver is not online, if this happens simpily refresh the page, another reason this may happen is if replit is blacklisted on your internet.</h3>
+   <h3 class = "a1">A: This is because the webserver is not online, if this happens simpily refresh the page, another reason this may happen is if replit is blacklisted on your internet. Another reason this may happen is if the kahoot has already started</h3>
  </h2>
  <h2 class = "q2">
   <b>Q: Why can I only send 200 bots?</b>
@@ -58,6 +58,7 @@
  <h2 class = "q4">
   <b>Q: How do I use the discord bot?</b>
   <h3 class = "a4">A: Invite it too your server with the given permissions it asks for, then run the <b>k!help</b> command for a list of all the commands</h3>
+</h2>
 </h2>
 </div>
 </html>
