--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
               <li class="active"><a href="https://kahootbotter.live">Home</a></li>
-              <li><a href="https://discord.com/api/oauth2/authorize?client_id=894342726210945054&permissions=532576300096&scope=bot">Discord Bot</a></li>
+              <li><a href="https://kahootbotter.live/bot/">Discord Bot</a></li>
               <li><a href="https://kahootbotter.live/discord/">Discord Server</a></li>
               <li><a href="https://kahootbotter.live/zoom/">Zoom Botter</a></li>
               <li><a href="https://kahootbotter.live/faq/">FAQ</a></li>
