--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang='en-US'>
 
+<!-- Re-designed by @Yot360 lol -->
+
 <head>
     <title>Kahoot Botter</title>
     <meta charset="utf-8">
@@ -15,6 +17,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    
+</head>
+
+<body>
+
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
           <div class="navbar-header">
@@ -36,9 +43,7 @@
           </div>
         </div>
       </nav>
-</head>
 
-<body>
     <div class='background'></div>
     <div class='container'>
         <h1 class='title'>
