--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <span class='error' id='pinError'></span><br>
             Bot Names, separated by commas:<br>
             (Each bot will choose a random one of these names)<br>
-            <input class='input' type='text' id='name' placeholder='Botted by DarthOCE, DarthOCE' value='Botted by DarthOCE, DarthOCE'><br>
+            <input class='input' type='text' id='name' placeholder='kahootbotter.live, kahootbotter.live/discord' value='kahootbotter.live, kahootbotter.live/discord'><br>
             <span class='error' id='nameError'></span><br>
 
             <label for="ans">Bot will answer: </label><br>
