--- a/bot/index.html
+++ b/bot/index.html
@@ -2,13 +2,13 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=https://discord.com/api/oauth2/authorize?client_id=894342726210945054&permissions=532576300096&scope=bot">
+        <meta http-equiv="refresh" content="0; url="https://discord.com/api/oauth2/authorize?client_id=894342726210945054&permissions=397284502592&scope=bot%20applications.commands">
         <script type="text/javascript">
-            window.location.href = "https://discord.com/api/oauth2/authorize?client_id=894342726210945054&permissions=532576300096&scope=bot"
+            window.location.href = "https://discord.com/api/oauth2/authorize?client_id=894342726210945054&permissions=397284502592&scope=bot%20applications.commands"
         </script>
         <title>KahootBotter | Discord</title>
     </head>
     <body>
-        If you are not redirected automatically, follow this <a href='https://discord.com/api/oauth2/authorize?client_id=894342726210945054&permissions=532576300096&scope=bot'>to the discord server</a>.
+        If you are not redirected automatically, follow this <a href='https://discord.com/api/oauth2/authorize?client_id=894342726210945054&permissions=397284502592&scope=bot%20applications.commands'>to the discord server</a>.
     </body>
 </html>
